--- a/components/application/CodeRx/templates/editor.html
+++ b/components/application/CodeRx/templates/editor.html
@@ -15,14 +15,28 @@
       font-size: 16px;
       line-height: 17px; /* <- initial line-height */
     }
+    #loadingElement{
+        text-align: center;
+        overflow:fixed;
+        position: absolute;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+    }
 </style>
-
+    <div class="justify-content-center" id="loadingElement">
+        <h1 style="display: block;">Loading</h1>
+        <img src="https://media0.giphy.com/media/pOKrXLf9N5g76/giphy.gif" alt="Loading" width="300" height="300" style="margin-left: auto;margin-right: auto;left: 0;
+        right: 0;margin-top: auto;margin-bottom: auto;top: 0;bottom: 0;display: block;">
+    </div>
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-8">
             <div id="container" style="width:65vw;height:75vh;border:1px solid grey"></div>
-            <button type="button" id="generate" class="btn btn-primary btn-lg btn-block">Generate Output Line</button>
+            <button type="button" id="generate" class="btn btn-primary btn-lg btn-block" 
+            style="display: none;">Generate Output Line</button>
             
         </div>
         <div class="col-lg-4">
@@ -35,68 +49,37 @@
                     culpa qui officia deserunt mollit anim id est laborum."
                 </div>
             </div>
+            <h3>Program output</h3>
+            <div id="terminal"></div>
             <div id="displayResults" style="display: none; position: absolute; top: 0; right: 0;">
-            <div class="row">
-                <div class="col-lg">
-                    <table class="table table-dark table-bordered">
-                        <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Expected</th>
-                                <th scope="col">Run</th>
-                                <th scope="col">Result</th>
-                            </tr>
-                        </thead>
-                        
-                        <tbody>
-                            {% for case in TestCases %}
-                            <tr>
-                                <th scope = "row"> {{loop.index}}</th>
-                                <td id = "results_{{loop.index}}_1">{{case.input}}</td>
-                                <td id = "results_{{loop.index}}_2"></td>
-                                <td id = "results_{{loop.index}}_3"></td>
-                            {% endfor %}
-
-
-
-
-
-
-
-
-                        {#
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>HelloWorld(1,2) -> True</td>
-                                <td>True</td>
-                                <td>OK</td>
-                                <td style="background-color: green;"></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>HelloWorld(2,2) -> True</td>
-                                <td>True</td>
-                                <td>OK</td>
-                                <td style="background-color: green;"></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>HelloWorld(2,1) -> True</td>
-                                <td>False</td>
-                                <td>X</td>
-                                <td style="background-color: red;"></td>
-                            </tr>
-                            #}
-                        </tbody>
-                    </table>
+                <div class="row">
+                    <div class="col-lg">
+                        <table class="table table-dark table-bordered">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Expected</th>
+                                    <th scope="col">Run</th>
+                                    <th scope="col">Result</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for case in TestCases %}
+                                <tr>
+                                    <th scope = "row">{{loop.index}}</th>
+                                    <td id = "results_{{loop.index}}_1">{{case.input}}</td>
+                                    <td id = "results_{{loop.index}}_2"></td>
+                                    <td id = "results_{{loop.index}}_3"></td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
     </div>
 </div>
-<h3>Program output</h3>
-<div id="terminal"></div>
 <script>function displayResults() {
   var x = document.getElementById("displayResults");
   if (x.style.display === "none") {
@@ -106,7 +89,21 @@
   }
 }
 </script>
-
+<script>function loadingElement() {
+  var a = document.getElementById("loadingElement");
+  var b = document.getElementById("container");
+  var c = document.getElementById("generate");
+  if (a.style.display === "none") {
+    a.style.display = "block";
+    b.style.display = "none";
+    c.style.display = "none";
+  } else {
+    a.style.display = "none";
+    b.style.display = "block";
+    c.style.display = "block";
+  }
+}
+</script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="{{ url_for('static', filename='node_modules/monaco-editor/min/vs/loader.js')}}"></script>
@@ -164,6 +161,11 @@
             theme: "vs-dark",
             lineNumbers: "on"
         });
+        var x = document.getElementById("generate");
+        if (x.style.display === "none") {
+            x.style.display = "block";
+        }
+        loadingElement();
     });
 </script>
 
@@ -193,13 +195,14 @@
                 }
                 term.writeln(data[i].stdout);
             }
-            
+            loadingElement();
+            document.getElementById("displayResults").style.display = "block";
         });
         
     });
 
     $('#generate').on('click', function (e) {
-        displayResults();
+        loadingElement();
         console.log("Sending code to backend");
         //socket.emit("new_problem_from_user", {data: cstr_encode(editor.getValue())})
         socket.emit("new_problem_from_user", {data: editor.getValue()});
