--- a/components/application/CodeRx/templates/editor.html
+++ b/components/application/CodeRx/templates/editor.html
@@ -36,20 +36,16 @@
         <div class="col-lg-8">
             <div id="container" style="width:65vw;height:75vh;border:1px solid grey"></div>
             <button type="button" id="generate" class="btn btn-primary btn-lg btn-block" 
-            style="display: none;">Generate Output Line</button>
+            style="display: none;">Compile</button>
             
         </div>
         <div class="col-lg-4">
             <div class="row mb-3">
-                <div class="col-lg" style="font-size: 16pt; color: white;">
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Esxcepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum."
+                <div class="col-lg" style="font-size: 16pt; color: white; padding-left: 20px;">
+                    A set of test variables are passed through the system.in with an expected output.
                 </div>
             </div>
-            <h3>Program output</h3>
+            <h3 style="padding-left: 20px;"">Program output</h3>
             <div id="terminal"></div>
             <div id="displayResults" style="display: none; position: absolute; top: 0; right: 0;">
                 <div class="row">
@@ -80,6 +76,64 @@
         </div>
     </div>
 </div>
+<div id="problemsList" style="display:none">
+  <div class="sidenav">
+            <table class="table table-dark table-bordered" > 
+              <thead>
+                <tr>
+                  <th width="35%">Current HW</th>
+                  <th>Class</th>
+                  <th width="25%">Due Date</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for case in current_problems %}
+                  <tr>
+                    <th>
+                      {#<button onclick="{{case}}()" class="btn btn-primary btn-lg btn-block" style="padding: 5px;">{{case.name}}</button>#}
+                      <a href="{{ url_for('homepage') }}">{{case.name}}</a></th>
+                    <th>{{case.class}}</th>
+                    <th>{{case.due_date}}</th>
+                  </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+        </div>
+  </div>
+</div>
+<style>
+    .sidenav {
+  width: 200px;
+  position: fixed;
+  z-index: 1;
+  top: 65px;
+  left: 10px;
+  background: #eee;
+  overflow-x: hidden;
+  padding: 8px 0;
+}
+
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #2196F3;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #064579;
+}
+</style>
+<script>function displayProblems() {
+  var x = document.getElementById("problemsList");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+</script>
 <script>function displayResults() {
   var x = document.getElementById("displayResults");
   if (x.style.display === "none") {
