--- a/components/application/CodeRx/templates/editor.html
+++ b/components/application/CodeRx/templates/editor.html
@@ -81,9 +81,9 @@
             <table class="table table-dark table-bordered" > 
               <thead>
                 <tr>
-                  <th width="35%">Current HW</th>
+                  <th width= 30%>Current HW</th>
                   <th>Class</th>
-                  <th width="25%">Due Date</th>
+                  <th>Due Date</th>
                 </tr>
               </thead>
               <tbody>
@@ -103,20 +103,16 @@
 </div>
 <style>
     .sidenav {
-  width: 200px;
+  width: 400px;
   position: fixed;
   z-index: 1;
   top: 65px;
   left: 10px;
   background: #eee;
-  overflow-x: hidden;
-  padding: 8px 0;
+  overflow: auto;
 }
 
 .sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
   color: #2196F3;
   display: block;
 }
